--- a/Src/Prosumer/public/style.css
+++ b/Src/Prosumer/public/style.css
@@ -1,3 +1,25 @@
 #windDiv p, #productionDiv p, #consumptionDiv p, #netProductionDiv p, #bufferDiv p, #priceDiv p{
 	display: inline;
 }
+
+h1{
+	color: green;
+}
+
+body{
+	width: 50%;
+	margin-left: 50px;
+}
+
+#logout {
+	margin-top: 30px;
+}
+
+#myImg {
+	float: right;
+	margin-right: 60%;
+}
+
+#submit {
+	margin-top: 30px;
+}
