--- a/Src/Prosumer/public/styleManager.css
+++ b/Src/Prosumer/public/styleManager.css
@@ -62,6 +62,13 @@ border-color: #99ff66 !important;
 transition: all 0.4s ease 0s;
 }
 
+.button:disabled:hover {
+color: #494949 !important;
+background: red;
+border-color: red !important;
+transition: all 0.4s ease 0s;
+}
+
 .inputfile {
 	width: 0.1px;
 	height: 0.1px;
@@ -152,4 +159,6 @@ width: 100px;
 	display: grid;
 	width: 162px;
 }
+
+
 
