--- a/Src/Prosumer/public/styleProsumer.css
+++ b/Src/Prosumer/public/styleProsumer.css
@@ -42,6 +42,16 @@ h2{
 }
 
 #myImg{
+	margin: 10px;
+}
+
+#alert{
+	text-align: center;
+	font-size: 20px;
+	margin: 10px;
+}
+
+#alertDiv{
 	float: right;
 	margin: 10px;
 }
